# gps

./: .gitignore  vim_code_reading.session
experiments/baxter_badmm_example/: hyperparams.py
experiments/pr2_badmm_example/: hyperparams.py
python/gps/: gps_main.py  tags
python/gps/agent/ros/: agent_ros.py  ros_utils.py
python/gps/algorithm/: algorithm.py  algorithm_badmm.py  algorithm_utils.py
python/gps/algorithm/cost/: cost_fk.py
python/gps/algorithm/dynamics/: dynamics_lr_prior.py  dynamics_prior_gmm.py
python/gps/algorithm/policy/: lin_gauss_init.py
python/gps/algorithm/policy_opt/: outsource_policy_opt_to_ros.py  policy_opt_caffe.py
python/gps/algorithm/traj_opt/: traj_opt_lqr_python.py
python/gps/gui/: gps_training_gui.py
python/gps/utility/: gmm.py
src/gps_agent_pkg/: CMakeLists.txt  package.xml  tags
src/gps_agent_pkg/catkin_generated/: generate_cached_setup.py
src/gps_agent_pkg/devel/: _setup_util.py
src/gps_agent_pkg/launch/: pr2_gazebo.launch
src/gps_agent_pkg/msg/: ControllerParams.msg
src/gps_agent_pkg/src/: encodersensor.cpp  lingausscontroller.cpp  pr2plugin.cpp  robotplugin.cpp  rostopicsensor.cpp  sample.cpp
src/proto/: gps.proto
